--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,22 @@
 # == custom key bindings ==
+# Remap prefix to Ctrl-A
 set -g prefix C-a
 unbind-key C-b
 bind C-a send-prefix
+
+# Reload the tmux config file
+unbind R
+bind R source-file ~/.tmux.conf 
+
+# Alt + arrow pane switching
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# == Other settings ==
+# 256 color terminal
+set -g default-terminal "xterm-256color"
 
 # == TMUX Plugin Manager ==
 # Default plugins
