--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,9 @@ set -g prefix C-a
 unbind-key C-b
 bind C-a send-prefix
 
+bind-key R source-file ~/.tmux.conf 
+
+
 # == TMUX Plugin Manager ==
 # Default plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -10,7 +13,12 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Other plugins:
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# automatically restore tmux state
+set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
+display-message "~/.tmux.conf reloaded"
